docs/api/qiskit/0.25/qiskit.providers.aer.extensions.SnapshotExpectationValue.mdx
---
title: SnapshotExpectationValue
description: API reference for qiskit.providers.aer.extensions.SnapshotExpectationValue
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotExpectationValue
---

# qiskit.providers.aer.extensions.SnapshotExpectationValue

<Class id="qiskit.providers.aer.extensions.SnapshotExpectationValue" github="https://github.com/qiskit/qiskit-aer/tree/stable/0.8/qiskit/providers/aer/extensions/snapshot_expectation_value.py" signature="SnapshotExpectationValue(label, op, single_shot=False, variance=False)">
  Snapshot instruction for supported methods of Qasm simulator.

  Create an expectation value snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **op** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – operator to snapshot.
  *   **single\_shot** (*bool*) – return list for each shot rather than average \[Default: False]
  *   **variance** (*bool*) – compute variance of values \[Default: False]

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  <Admonition title="Note" type="note">
    This instruction will be deprecated after the qiskit-aer 0.8 release. It has been superseded by the [`qiskit.providers.aer.library.SaveExpectationValue`](qiskit.providers.aer.library.SaveExpectationValue "qiskit.providers.aer.library.SaveExpectationValue") and [`qiskit.providers.aer.library.SaveExpectationValueVariance`](qiskit.providers.aer.library.SaveExpectationValueVariance "qiskit.providers.aer.library.SaveExpectationValueVariance") instructions.
  </Admonition>

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.__init__" name="__init__" signature="__init__(label, op, single_shot=False, variance=False)">
    Create an expectation value snapshot instruction.

    **Parameters**

    *   **label** (*str*) – the snapshot label.
    *   **op** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – operator to snapshot.
    *   **single\_shot** (*bool*) – return list for each shot rather than average \[Default: False]
    *   **variance** (*bool*) – compute variance of values \[Default: False]

    **Raises**

    **ExtensionError** – if snapshot is invalid.

    <Admonition title="Note" type="note">
      This instruction will be deprecated after the qiskit-aer 0.8 release. It has been superseded by the [`qiskit.providers.aer.library.SaveExpectationValue`](qiskit.providers.aer.library.SaveExpectationValue "qiskit.providers.aer.library.SaveExpectationValue") and [`qiskit.providers.aer.library.SaveExpectationValueVariance`](qiskit.providers.aer.library.SaveExpectationValueVariance "qiskit.providers.aer.library.SaveExpectationValueVariance") instructions.
    </Admonition>
  </Function>

  ## Methods

  |                                                                                                                                                                                                                            |                                                                          |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.__init__ "qiskit.providers.aer.extensions.SnapshotExpectationValue.__init__")(label, op\[, single\_shot, variance])                                 | Create an expectation value snapshot instruction.                        |
  | [`add_decomposition`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.add_decomposition "qiskit.providers.aer.extensions.SnapshotExpectationValue.add_decomposition")(decomposition)                             | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.assemble "qiskit.providers.aer.extensions.SnapshotExpectationValue.assemble")()                                                                     | Assemble a QasmQobjInstruction for snapshot\_expectation\_value.         |
  | [`broadcast_arguments`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.broadcast_arguments "qiskit.providers.aer.extensions.SnapshotExpectationValue.broadcast_arguments")(qargs, cargs)                        | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.c_if "qiskit.providers.aer.extensions.SnapshotExpectationValue.c_if")(classical, val)                                                                   | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.copy "qiskit.providers.aer.extensions.SnapshotExpectationValue.copy")(\[name])                                                                          | Copy of the instruction.                                                 |
  | [`define_snapshot_register`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.define_snapshot_register "qiskit.providers.aer.extensions.SnapshotExpectationValue.define_snapshot_register")(circuit\[, label, …]) | Defines qubits to snapshot for all snapshot methods                      |
  | [`inverse`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.inverse "qiskit.providers.aer.extensions.SnapshotExpectationValue.inverse")()                                                                        | Special case.                                                            |
  | [`is_parameterized`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.is_parameterized "qiskit.providers.aer.extensions.SnapshotExpectationValue.is_parameterized")()                                             | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.mirror "qiskit.providers.aer.extensions.SnapshotExpectationValue.mirror")()                                                                           | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.qasm "qiskit.providers.aer.extensions.SnapshotExpectationValue.qasm")()                                                                                 | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.repeat "qiskit.providers.aer.extensions.SnapshotExpectationValue.repeat")(n)                                                                          | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.reverse_ops "qiskit.providers.aer.extensions.SnapshotExpectationValue.reverse_ops")()                                                            | For a composite instruction, reverse the order of sub-instructions.      |
  | [`soft_compare`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.soft_compare "qiskit.providers.aer.extensions.SnapshotExpectationValue.soft_compare")(other)                                                    | Soft comparison between gates.                                           |
  | [`validate_parameter`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.validate_parameter "qiskit.providers.aer.extensions.SnapshotExpectationValue.validate_parameter")(parameter)                              | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                                                                                        |                                                                               |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.decompositions "qiskit.providers.aer.extensions.SnapshotExpectationValue.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.definition "qiskit.providers.aer.extensions.SnapshotExpectationValue.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.duration "qiskit.providers.aer.extensions.SnapshotExpectationValue.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.label "qiskit.providers.aer.extensions.SnapshotExpectationValue.label")                            | Return snapshot label                                                         |
  | [`params`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.params "qiskit.providers.aer.extensions.SnapshotExpectationValue.params")                         | return instruction params.                                                    |
  | [`snapshot_type`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.snapshot_type "qiskit.providers.aer.extensions.SnapshotExpectationValue.snapshot_type")    | Return snapshot type                                                          |
  | [`unit`](#qiskit.providers.aer.extensions.SnapshotExpectationValue.unit "qiskit.providers.aer.extensions.SnapshotExpectationValue.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction for snapshot\_expectation\_value.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.define_snapshot_register" name="define_snapshot_register" signature="static define_snapshot_register(circuit, label=None, qubits=None)">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  ### definition

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.inverse" name="inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.label" name="label" signature="property label">
    Return snapshot label
  </Function>

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### snapshot\_type

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.snapshot_type" name="snapshot_type" signature="property snapshot_type">
    Return snapshot type
  </Function>

  ### soft\_compare

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.soft_compare" name="soft_compare" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  ### unit

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

